# karteros

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STACK.md
.github/workflows/: ci.yml
crates/karteros-operation/: Cargo.toml
crates/karteros-operation/src/: lib.rs
crates/karteros-outbox/: Cargo.toml
crates/karteros-outbox/src/: lib.rs
crates/karteros-testkit/: Cargo.toml
crates/karteros-testkit/src/: lib.rs
docs/: naming-conventions.md
docs/patterns/: README.md  crash-resistant-outbox.md
docs/superpowers/plans/: 2026-07-18-pattern-lab-mvp.md
examples/crash-recovery/: Cargo.toml  README.md
examples/crash-recovery/src/: main.rs
examples/crash-recovery/tests/: two_crash_recovery.rs
